methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:8: error: value Blue is not a member of object java.awt.Color
    Motif(Color.Blue)
                ^